# pi-pico-usbserial-cmdline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rp2040.jflash
inc/: tusb_config.h
src/: uart_bridge.c  usb_descriptors.c
src/cli/: alpha_power_modes.c  alpha_power_modes.h  cli.c  cli.h
src/pio/: uart_rx.pio  uart_tx.pio
submodules/: CMakeLists.txt
